# Alura_AI

./: .gitignore  pyproject.toml
PDF_CHAT_IA/: PDF_IA.py  bulas_pdf.py
chroma_db/: chroma.sqlite3
embeddings/: consulta.py  embedins.py  vectorstore_chroma.py
