[project]
name = "meulangchain"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-voyageai>=0.3.3",
    "langsmith[claude-agent-sdk]>=0.8.5",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
